--- a/TTA_EJEMPLO_PR1/app/src/main/res/values/strings.xml
+++ b/TTA_EJEMPLO_PR1/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">TTA_EJEMPLO_PR1</string>
+    <string name="username_label">Usuario</string>
+    <string name="username_placeholder">INTRODUCE DNI</string>
+    <string name="passwd_label">Contraseña</string>
+    <string name="passwd_placeholder">INTRODUCE CONTRASEÑA</string>
+    <string name="button1_label">ACCEDER</string>
 </resources>
