Practica 2: primera parte terminada. Añadido diferentes tipos de ayuda multimedia al test.

--- a/TTA_EJEMPLO_PR1/app/src/main/res/values/strings.xml
+++ b/TTA_EJEMPLO_PR1/app/src/main/res/values/strings.xml
@@ -18,4 +18,9 @@
     <string name="button6_label">SACAR FOTOS</string>
     <string name="button7_label">GRABAR AUDIO</string>
     <string name="button8_label">GRABAR VIDEO</string>
+    <string name="answ1">Versión de la aplicación</string>
+    <string name="answ2">Listado de los componentes de la aplicación</string>
+    <string name="answ3">Opciones del menú de ajustes</string>
+    <string name="answ4">Nivel mínimo de la API Android requerida</string>
+    <string name="answ5">Nombre del paquete java de la aplicación</string>
 </resources>
